<resources>
    <string name="app_name">SwitP</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_recording">RecordingActivity</string>

    <string name="preference_file_key">SWITP_Shared_Prefs</string>

    <string name="switch_name">Switch</string>
    <string name="default_text">TextView</string>

    <string name="settings">Settings</string>
    <string name="simulate">Simulate data</string>
    <string name="save_original">Export original</string>
    <string name="save_resampled">Exp. resampled</string>
    <string name="save_classified">Export classified</string>
    <string name="save_lap">Export laps</string>
    <string name="save_stroke">Export strokes</string>
    <string name="pool_length">Length: 25m/50m</string>
    <string name="key_pref_simulate">pref_simulate</string>
    <string name="key_pref_save_original">pref_save_original</string>
    <string name="key_pref_save_resampled">pref_save_resampled</string>
    <string name="key_pref_save_classified">pref_save_classified</string>
    <string name="key_pref_save_lap">pref_save_lap</string>
    <string name="key_pref_save_stroke">pref_save_stroke</string>
    <string name="key_pref_pool_length">pref_pool_length</string>

    <string name="lap_tv">0</string>
    <string name="lapTitle_tv">Laps:</string>
    <string name="stroke_tv">0</string>
    <string name="strokeTitle_tv">Strokes:</string>
    <string name="timer_tv">00:00:00</string>
    <string name="timerTitle_tv">Total time:</string>
    <string name="title_activity_confirm_dialog">Confirm Dialog</string>
    <string name="question_text">question_text</string>

</resources>
