<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:title="@string/settings">
    <SwitchPreference
        android:key="pref_simulate"
        android:title="@string/simulate"
        android:layout="@layout/custom_preferences"
        android:widgetLayout="@layout/custom_widget_switch"/>
    <SwitchPreference
        android:key="pref_save_original"
        android:title="@string/save_original"
        android:layout="@layout/custom_preferences"
        android:widgetLayout="@layout/custom_widget_switch"/>
    <SwitchPreference
        android:key="pref_save_resampled"
        android:title="@string/save_resampled"
        android:layout="@layout/custom_preferences"
        android:widgetLayout="@layout/custom_widget_switch"/>
    <SwitchPreference
        android:key="pref_save_classified"
        android:title="@string/save_classified"
        android:layout="@layout/custom_preferences"
        android:widgetLayout="@layout/custom_widget_switch"/>
    <SwitchPreference
        android:key="pref_save_lap"
        android:title="@string/save_lap"
        android:layout="@layout/custom_preferences"
        android:widgetLayout="@layout/custom_widget_switch"/>
    <SwitchPreference
        android:key="pref_save_stroke"
        android:title="@string/save_stroke"
        android:layout="@layout/custom_preferences"
        android:widgetLayout="@layout/custom_widget_switch"/>
    <SwitchPreference
        android:key="pref_pool_length"
        android:title="@string/pool_length"
        android:layout="@layout/custom_preferences"
        android:widgetLayout="@layout/custom_widget_switch"/>
</PreferenceScreen>