<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/dark_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/dark_grey"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".RecordingActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0pt"
            android:background="@drawable/customborder"
            android:gravity="center|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timerTitle_tv"
                android:textAlignment="textStart"
                android:textSize="10sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/timerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/timer_tv"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lapBox"
                android:layout_width="@android:dimen/notification_large_icon_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inner_frame_layout_padding"
                android:layout_marginTop="@dimen/inner_frame_layout_padding"
                android:layout_marginEnd="@dimen/inner_frame_layout_padding"
                android:layout_marginBottom="@dimen/inner_frame_layout_padding"
                android:background="@drawable/customborder"
                android:gravity="center|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lapTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lapTitle_tv"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lapView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/lap_tv"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@android:dimen/notification_large_icon_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inner_frame_layout_padding"
                android:layout_marginTop="@dimen/inner_frame_layout_padding"
                android:layout_marginEnd="@dimen/inner_frame_layout_padding"
                android:layout_marginBottom="@dimen/inner_frame_layout_padding"
                android:layout_toEndOf="@id/lapBox"
                android:background="@drawable/customborder"
                android:gravity="center|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/strokeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strokeTitle_tv"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/strokeView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/stroke_tv"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.wear.widget.CircularProgressLayout
                    android:id="@+id/stop_recording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    app:backgroundColor="@android:color/holo_red_dark"
                    app:colorSchemeColors="@android:color/white"
                    app:strokeWidth="4dp">

                    <ImageView
                        android:id="@+id/stop_recording_iv"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_stop_24px" />
                </androidx.wear.widget.CircularProgressLayout>

                <TextView
                    android:id="@+id/stop_recording_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Stop" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>